fix: remove creating user (tg data instead)
